x-overflow fixed

--- a/index.css
+++ b/index.css
@@ -585,7 +585,7 @@ body {
 @media screen and (max-width : 480px) {
 
   html,body {
-    overflow-x: auto;
+    overflow-x: hidden;
   }
 
   .contact{
